2.5.3 -> 2.5.4:
	- non-zero exit status for verify failures.
	- hpux does setreuid differently (Hermann Lauer)
	- check for setreuid portably (Eugene Kanter).
	- add Serbian translation (Zoltan Csala <zcsala@iname.com>).
	- arch/os tables were not being initialized  for noarch builds.
	- quote users/groups/filenames in --setugids.
	- add Russian translation w man pages (Serguei Koubouchine <ksi@gu.net>)
	- fix virtual file attribute bug that skipped all files in binary rpm.
	- eliminate infinite loop with missing tmpdir (Trent Jarvi).
	- os_canon for CYGWIN32_NT/95.
	- rationalize autoconf detection of gzip/bzip2.
	- restore backward compatible rpmrc/rpmpopt symlinks.
	- update pt_BR translations (Arnaldo Carvalho de Melo).
	- permit --{buildroot,timecheck,test,sign} with -tX (Toshio Kuratomi).
	- fix database rebuilds with triggers (Steve Sanberg).
	- diagnostic message if unreadable/short source or patch file.
	- eliminate redundant close in provide/require processing.
	- solaris portability patch resurrection (Steve Sanberg).
	- permit autogen.sh to work on non "prefix=/usr" hosts.
	- add %license/%readme virtual file attributes.
	- align "Build Host:" with other fields.

2.5.2 -> 2.5.3:
	- copy changelog tags to sub-packages just before packaging
	- added EPOCH handling to supplement serial numbers
	- add RPMTAG_EPOCH and RPMTAG_CAPABILITY init to 0.
	- fix infinite recursion on non-ERANGE return from getcwd() during
	  install (Matt Wilson).
	- rm .depend for multiple builds in same tree (Will Partain)
	- addFile: fix special case of "/" in %files.
	- better query semantics with symlinks (Tim Mooney)
	- build.c: fix incorrect check for successful open
	- allow %define with leading whitespace
	- use /usr/lib/rpm for rpmpopt, rpmrc, find-requires, find-provides
	- added popt 'exec' functionality
	- made --rebuilddb a bit more robust by checking data types
	- added --freshen via popt exec stuff
	- fixed spelling of expected
	- updated de.po (Karl Eichwalder)