@@ -1,4 +1,5 @@
 2.5.3 -> 2.5.4:
+	- provides/obsoletes requires tokens that begin with alnum or _.
 	- non-zero exit status for verify failures.
 	- hpux does setreuid differently (Hermann Lauer)
 	- check for setreuid portably (Eugene Kanter).
